--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+data/checkpoint_dir/*
+data/edges/*
+data/vertices/*
+data/original/*
+.vscode
 # C extensions
 *.so
 
